portal-dev/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: portal-dev-frontend
  name: portal-dev-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portal-dev-frontend
  template:
    metadata:
      labels:
        app: portal-dev-frontend
    spec:
      nodeSelector:
        kubernetes.io/hostname: "eee101.tokyotech.org"
      containers:
        - image: ghcr.io/traptitech/portal-ui:staging@sha256:bc63fa654482a915dc5abfaae4630ca5aec41160c4e4de7e0598b7eb790a0e10
          name: portal-dev-ui
          ports:
            - containerPort: 80
              protocol: TCP
      restartPolicy: Always
