portal-dev/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: portal-dev-frontend
  name: portal-dev-frontend
spec:
  ports:
    - name: "8100"
      port: 8100
      targetPort: 80
  selector:
    app: portal-dev-frontend
