portal-dev/frontend/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: portal-dev-frontend

spec:
  entryPoints:
    - websecure
  tls:
    secretName: portal-dev-tls
  routes:
    - kind: Rule
      match: Host(`portal-dev.trapti.tech`)
      priority: -100
      services:
        - namespace: portal-dev
          kind: Service
          name: portal-dev-frontend
          port: http
          scheme: http
          strategy: RoundRobin
          weight: 1
